<resources>
    <string name="app_name">Go Notes</string>
    <string name="about_header">About Go Notes</string>
    <string name="login_header">Hello, I am Login Fragment</string>
    <string name="settings_header">Hello, I am Settings Fragment</string>
    <string name="backup_header">Backup and Sync</string>
    <string name="backup_why_do_we_require_sign_in_header">Why do we require Google Sign in?</string>
    <string name="backup_why_do_we_require_sign_in_content">We back up your notes to your Google Account so that all notes remain private to you(no one can see them, not even us) and you can get those notes easily latter on.</string>
    <string name="backup_last">Last back up : %s</string>
    <string name="backup_logged_in_account">Back up account : %s</string>
    <string name="backup_details_header">What do we back up to your account?</string>
    <string name="backup_details_content">Backed up notes only include : \n    *Titles \n    *Descriptions \n    *Colours</string>
    <string name="backup_info">Your phone backs up automatically over Wi-Fi after an interval of 7-days that is weekly.\nYou can change this interval to back up notes Daily, Weekly or Monthly.</string>
    <string-array name="backup_intervals">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string name="update_header">Hello, I am Update Fragment</string>
    <string name="update_last_on">Last Update : 30th April,2022</string>
    <string name="update_app_text">Update Go Notes</string>
    <string name="update_app_text_checking">Checking…</string>
    <string name="update_app_text_check_for_updates">Check for updates</string>
    <string name="update_app_text_not_required">Latest version is already installed</string>
    <string name="update_version_notes_header">What Features are included in %s version?</string>
    <string name="update_version_notes_content">Following features are included : \n    %s</string>
    <string name="update_when_do_we_post">When do we send updates?</string>
    <string name="update_when_do_we_post_content">We send updates mostly every month, so that you don\'t have to update app every-day.</string>
    <string name="update_content">We are always making changes and improvements to Go Notes, to add few new features and to make sure you don\'t miss a thing.</string>
    <string name="view_notes_header">Hello, I am View Notes Fragment</string>
    <string name="edit_note_header">Hello, I am Edit Note Fragment</string>
    <string name="create_note_header">Hello, I am Create Note Fragment</string>
    <string name="welcome_header">Hello, I am Welcome Fragment</string>
    <string name="bin_header">Hello, I am Bin Fragment</string>
    <string name="bin_title">Recycle Bin</string>
    <string name="bin_details">Notes deleted are stored here by default for 30-days. You can restore these notes or delete them forever. \nAfter 30-days these notes are automatically deleted.</string>
    <string name="launcher_header">Hello, I am Launcher Fragment</string>
    <string name="gonotes_font_family">sans-serif-light</string>
    <string name="signin_with_google">SignIn with Google</string>
    <string name="signin_with_google_not_needed">You\'re already logged in</string>
    <string name="skip">Skip</string>
    <string name="contact_us">Contact Us</string>
    <string name="note_text">Note</string>
    <string name="add_note">Add Note</string>
    <string name="note_title_text">Note Title</string>
    <string name="note_body_text">Write description here!</string>
    <string name="backup_text">Back up now</string>
    <string name="delete_all_notes">Delete all notes</string>
    <string name="restore_all_notes">Restore all notes</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Default Note Template</string>
    <string name="sync_header">Backup and Sync</string>
    <string name="notes_header">Notes and Customisation</string>
    <string name="help_and_faqs_header">Help and Feedback</string>
    <string name="about_app_header">About Go Notes</string>
    <string name="contact_us_app_header">Contact Us</string>
    <string name="enable_bin_app_header">Enabled Recycle Bin </string>
    <string name="import_export_app_header">Import and Export notes</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="update_text">Update</string>
    <string name="note_is_locked">Note is Locked</string>
    <string name="backup_drop_down_prefix_text">Back up :</string>
    <string name="icon_text">icon</string>
    <string name="large_image">Large Image</string>
    <string name="small_icon">Small Icon</string>
    <string name="view_more_information_icon">View more information icon</string>
    <string name="about_app_name_version_name">Go Notes version 1.2022.1</string>
    <string name="about_app_copyright">©2022–2022 Go Notes (Aditya Bavadekar)</string>
    <string name="help_header">Help</string>
    <string name="get_help_header">Get help</string>
    <string name="faqs_text">FAQs</string>
    <string name="feedback_header">Feedback</string>
    <string name="give_feedback">Give feedback</string>
    <string name="report_a_problem">Report a problem</string>
    <string name="suggest_a_new_feature">Suggest a new feature</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="about_text">About</string>
    <string name="open_source_licences">Open-source licences</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="theme_preference_title">Application Theme</string>
    <string name="theme_preference_dialog_title">Choose Theme</string>
    <string name="theme_info_configure_text">Dark theme is best option when your device is in dark surroundings. You can change your theme from your device settings or from notification panel</string>
    <string name="theme_info_text">To change theme of your device, refer the <a href="https://google.com/">documentation.</a></string>
    <string-array name="format">
        <item>Plain Text</item>
        <item>Markdown</item>
    </string-array>

    <string name="transition_name_add_fab">add_fab</string>
    <string name="transition_name_edit_note">edit_note</string>
    <string name="transition_name_create_note">create_note</string>
    <string name="infocard_button_text_got_it">Got it</string>
    <string name="infocard_button_text_learn_more">Learn more</string>
    <string name="search_suggestion_hint">Search notes</string>
    <string name="edit_note_edit_text_loading_status">Loading…</string>
    <string name="feedback_body_edit_hint">Have a feedback? We\'d love to know it. Visit Help Centre to solve your doubts. If you want us to get back to you please also enter your email address above.</string>
    <string name="feedback_email_text_view_text">Your email address\n(Optional)</string>
    <string name="feedback_email_edit_text_hint">example@gmail.com</string>
    <string name="include_system_logs_text">Include System logs</string>
    <string name="include_screenshot_text">Include Screenshot</string>
    <string name="no_items_found">No matching notes found</string>
</resources>