<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?colorPrimary"
        app:layout_anchorGravity="top"
        app:liftOnScroll="true">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            tools:menu="@menu/menu_view_note"
            tools:title="@string/about_app_header" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingVertical="25dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/play_store_icon"
                    app:shapeAppearance="@style/ShapeAppearance.GoNotes.SmallComponent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:text="@string/about_app_name_version_name"
                    android:textAppearance="@style/TextAppearance.MyTheme.Headline6" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:text="@string/about_app_copyright"
                    android:textAppearance="@style/TextAppearance.MyTheme.Body3" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="3dp"
                android:text="@string/help_header"
                android:textAppearance="@style/TextAppearance.MyTheme.BodyHeader" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:gravity="center_vertical"
                android:paddingVertical="3dp"
                android:text="@string/get_help_header"
                android:textAppearance="@style/TextAppearance.MyTheme.Body1" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:gravity="center_vertical"
                android:paddingVertical="3dp"
                android:text="@string/faqs_text"
                android:textAppearance="@style/TextAppearance.MyTheme.Body1" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="3dp"
                android:text="@string/feedback_header"
                android:textAppearance="@style/TextAppearance.MyTheme.BodyHeader" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:gravity="center_vertical"
                android:paddingVertical="3dp"
                android:text="@string/give_feedback"
                android:textAppearance="@style/TextAppearance.MyTheme.Body1" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:gravity="center_vertical"
                android:paddingVertical="3dp"
                android:text="@string/report_a_problem"
                android:textAppearance="@style/TextAppearance.MyTheme.Body1" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:gravity="center_vertical"
                android:paddingVertical="3dp"
                android:text="@string/suggest_a_new_feature"
                android:textAppearance="@style/TextAppearance.MyTheme.Body1" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="3dp"
                android:text="@string/about_text"
                android:textAppearance="@style/TextAppearance.MyTheme.BodyHeader" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:gravity="center_vertical"
                android:paddingVertical="3dp"
                android:text="@string/terms_of_service"
                android:textAppearance="@style/TextAppearance.MyTheme.Body1" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:gravity="center_vertical"
                android:paddingVertical="3dp"
                android:text="@string/privacy_policy"
                android:textAppearance="@style/TextAppearance.MyTheme.Body1" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:gravity="center_vertical"
                android:paddingVertical="3dp"
                android:text="@string/open_source_licences"
                android:textAppearance="@style/TextAppearance.MyTheme.Body1" />


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>