<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?colorPrimary"
        app:liftOnScroll="true"
        app:liftOnScrollTargetViewId="@id/backupScrollView">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="@string/backup_header"
            tools:menu="@menu/menu_view_note" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/backupScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="25dp"
                android:paddingVertical="15dp"
                android:text="@string/update_content"
                android:textAppearance="@style/TextAppearance.MyTheme.Body1" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                tools:visibility="gone">

                <AutoCompleteTextView
                    android:id="@+id/backupIntervalAutoComplete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="1"
                    android:hint="@string/backup_drop_down_prefix_text"
                    android:inputType="none"
                    android:paddingStart="30dp"
                    android:text="Daily"
                    android:textAppearance="@style/TextAppearance.MyTheme.Body2" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="25dp"
                android:paddingBottom="5dp"
                android:text="@string/update_when_do_we_post"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline6" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="25dp"
                android:paddingBottom="15dp"
                android:text="@string/update_when_do_we_post_content"
                android:textAppearance="@style/TextAppearance.MyTheme.Body1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kumbh_sans_medium"
                android:paddingHorizontal="25dp"
                android:paddingBottom="15dp"
                android:text="@string/update_last_on"
                android:textAppearance="@style/TextAppearance.MyTheme.Body1" />

            <Button
                android:id="@+id/updateAppButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="25dp"
                android:paddingVertical="15dp"
                android:text="@string/update_app_text"
                android:textAllCaps="false"
                tools:enabled="false"
                tools:text="@string/update_app_text_not_required" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="25dp"
                android:paddingTop="15dp"
                android:paddingBottom="5dp"
                android:text="@string/update_version_notes_header"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline6" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="25dp"
                android:paddingBottom="5dp"
                android:text="@string/update_version_notes_content"
                android:textAppearance="@style/TextAppearance.MyTheme.Body1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="56dp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>

