<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="3dp"
        android:scrollbarSize="2dp"
        android:scrollbarStyle="outsideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/noteTitleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_note_edit_text_background"
                android:hint="@string/note_title_text"
                android:inputType="textMultiLine"
                android:maxLines="15"
                android:padding="20dp"
                android:text="@string/edit_note_edit_text_loading_status"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline6"
                tools:text="@tools:sample/full_names" />

            <EditText
                android:id="@+id/noteBodyEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_note_edit_text_background"
                android:gravity="start"
                android:hint="@string/note_body_text"
                android:inputType="textMultiLine"
                android:padding="20dp"
                android:text="@string/edit_note_edit_text_loading_status"
                android:textAppearance="@style/TextAppearance.MyTheme.Body1"
                tools:text="@tools:sample/lorem/random[10]" />

            <View
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="10dp" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/editNoteBottomAppbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="bottom"
        style="@style/GoNotes.Widget.BottomAppBar"
        app:elevation="4dp"
        app:menu="@menu/menu_edit_note_bottom_bar" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>